Changed component height and width to be stretch to fill in the parent container. Fixed Input.css syntax

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,8 +3,8 @@
     filter: grayscale(10%);
     
     
-    height: 85px;
-    width: 350px;
+    height: stretch;
+    width: stretch;
  
     border-radius: 20px;
     border: none;
